2002-10-14  Nanashi-san

	* jisx0208_1978_irv.tbr, jisx0208_1983_irv.tbr: New tables.
	* JISEditions.pm: New module.
	(Committed by Wakaba <w@suika.fam.cx>.)

2002-10-13  Nanashi-san

	* isoiec8859_*.tbr, iso_ir_204.tbr,
	iso_ir_205.tbr, iso_ir_206.tbr: New tables.
	* Makefile: Updated.
	(Committed by Wakaba <w@suika.fam.cx>.)

2002-10-06  Nanashi-san

	* *gb*.tbr, iso_ir_*.tbr, kps9566_1997.tbr,
	macchinesesimp.tbr, *ks*.tbr: New tables.
	* Makefile: Updated.
	(Committed by Wakaba <w@suika.fam.cx>.)

2002-10-05  Nanashi-san

	* *.tbr, Makefile: New files.
	* tool/: New directory.
	(Commited by Wakaba <w@suika.fam.cx>.)

2002-10-05  Wakaba <w@suika.fam.cx>

	* ChangeLog: New file.