@@ -18,7 +18,8 @@ PM_jis = jisx0208_1978.pm jisx0208_1978_irv.pm \
 PM_gb = gb2312_1980.pm gb12345_1990.pm iso_ir_165.pm
 PM_ks = ksx1001_1992.pm
 PM_kps = kps9566_1997.pm
-PM_misc = iso_ir_169.pm iso_ir_231.pm
+PM_photograph = imode.pm lmode.pm doti.pm jphone.pm iso_ir_169.pm
+PM_misc = iso_ir_231.pm
 PM_iso8859 = isoiec8859_2.pm isoiec8859_3.pm isoiec8859_4.pm \
   isoiec8859_5.pm isoiec8859_6.pm isoiec8859_7.pm \
   isoiec8859_8.pm isoiec8859_8_1999.pm isoiec8859_9.pm \
@@ -26,7 +27,7 @@ PM_iso8859 = isoiec8859_2.pm isoiec8859_3.pm isoiec8859_4.pm \
   isoiec8859_14.pm isoiec8859_15.pm isoiec8859_16.pm \
   iso_ir_204.pm iso_ir_205.pm iso_ir_206.pm
 
-all: jis gb ks kps iso8859 misc
+all: jis gb ks kps iso8859 photograph misc
 
 jis:  $(PM_jis)
 jis-tbl:  $(PM_jis:.pm=.tbl)
@@ -38,6 +39,8 @@ kps:  $(PM_kps)
 kps-tbl:  $(PM_kps:.pm=.tbl)
 iso8859:  $(PM_iso8859)
 iso8859-tbl:  $(PM_iso8859:.pm=.tbl)
+photograph:  $(PM_photograph)
+photograph-tbl:  $(PM_photograph:.pm=.tbl)
 misc:  $(PM_misc)
 misc-tbl:  $(PM_misc:.pm=.tbl)
 
@@ -58,3 +61,4 @@ clean:
 	  $(PM_kps) $(PM_kps:.pm=.tbl) \
 	  $(PM_iso8859) $(PM_iso8859:.pm=.tbl) \
 	  $(PM_misc) $(PM_misc:.pm=.tbl)
+	  $(PM_photograph) $(PM_photograph:.pm=.tbl)
