@@ -1,0 +1,86 @@
+#?PETBL/1.0 SOURCE
+#?o name="dot-i pictographs"
+#?o table-name="doti"
+#?o license="Public Domain"
+#?o map-internal="my ($c,$d,$t) = (shift); ($t,$c,$d) = ($1,hex $2,hex $3) if $c =~ /(A)-(..)(..)/; (0x7100E000 + ($c-0xF0)*188 + $d-0x40-($d>0x7F))"
+A-F040	U+0030
+A-F041	U+0031
+A-F042	U+0032
+A-F043	U+0033
+A-F044	U+0034
+A-F045	U+0035
+A-F046	U+0036
+A-F047	U+0037
+A-F048	U+0038
+A-F049	U+0039
+
+A-F04D	U+2776
+A-F04E	U+2777
+A-F04F	U+2778
+A-F050	U+2779
+A-F051	U+277A
+A-F052	U+277B
+A-F053	U+277C
+A-F054	U+277D
+A-F055	U+277E
+A-F056	U+277F
+
+A-F05A	U+32A1
+
+A-F05F	U+24C6
+A-F060	U+24B6
+
+A-F062	U+3299
+
+A-F068	U+328E
+
+A-F08F	U+273F
+
+A-F0E5	U+2600
+A-F0E6	U+2601
+A-F0E8	U+2603
+
+A-F0DE	U+2668		# HOT SPRINGS
+
+A-F0EA	U+25C0
+A-F0EB	U+25B6
+
+A-F0EE	U+23CE		# RETURN SYMBOL
+A-F0EF	U+267B		# BLACK UNIVERSAL RECYCLING SYMBOL
+A-F0F0	U+261E
+A-F0F1	U+261C
+A-F0F2	U+261F
+A-F0F3	U+261D
+
+A-F0F5	U+270C
+
+A-F0F9	U+2764
+
+A-F0FB	U+2665
+A-F0FC	U+2666
+A-F140	U+2663
+A-F141	U+2664
+A-F142	U+203C		# DOUBLE EXCLAMATION MARK
+A-F143	U+2049		# EXCLAMATION QUESTION MARK
+
+A-F145	U+00B2
+
+A-F194	U+2591
+
+A-F1CB	U+261D
+
+A-F1CE	U+6625
+A-F1CF	U+590F
+A-F1D0	U+79CB
+A-F1D1	U+51AC
+
+A-F4A0	U+2197
+A-F4A1	U+2198
+A-F4A2	U+2196
+A-F4A3	U+2199
+
+A-F4A9	U+0021
+
+A-F4BD	U+2709
+
+#; $Date: 2002/12/18 10:21:09 $
