@@ -1,0 +1,63 @@
+#?PETBL/1.0 SOURCE
+#?o name="i-mode pictographs"
+#?o table-name="imode"
+#?o charset-chars="256"
+#?o charset-dimension="2"
+#?o charset-name="sjis_imode_g3"
+#?o license="Public Domain"
+#?o map-internal="my ($c,$d,$t) = (shift); ($t,$c,$d) = ($1,hex $2,hex $3) if $c =~ /([IL])-(..)(..)/; (0x7100E524 + ($c-0xF7)*188 + $d-0x40-($d>0x7F) + ($t eq 'L' && $c==0xF7?188*3:0))"
+I-F89F	U+2600
+I-F8A0	U+2601
+I-F8A1	U+2602
+I-F8A2	U+2603
+
+I-F8A7	U+2648
+I-F8A8	U+2649
+I-F8A9	U+264A
+I-F8AA	U+264B
+I-F8AB	U+264C
+I-F8AC	U+264D
+I-F8AD	U+264E
+I-F8AE	U+264F
+I-F8AF	U+2650
+I-F8B0	U+2651
+I-F8B1	U+2652
+I-F8B2	U+2653
+
+I-F8E8	U+260F
+
+I-F8EE	U+2665
+I-F8EF	U+2660
+I-F8F0	U+2666
+I-F8F1	U+2663
+
+I-F8F7	U+2198
+I-F8F8	U+2196
+
+I-F949	U+2199
+
+I-F977	U+2709
+
+I-F991	U+2764
+
+I-F99A	U+2934		# ARROW POINTING RIGHTWARDS THEN CURVING UPWARDS
+I-F99B	U+266A		# EIGHTH NOTE
+I-F99C	U+2668		# HOT SPRINGS
+
+I-F9A5	U+2935		# ARROW POINTING RIGHTWARDS THEN CURVING DOWNWARDS
+
+I-F9A7	U+0021
+I-F9A8	U+2049		# EXCLAMATION QUESTION MARK
+I-F9A9	U+203C		# DOUBLE EXCLAMATION MARK
+
+I-F9AE	U+3030
+
+## Extended set
+I-F9D6	U+00A9		# COPYRIGHT SIGN
+I-F9D7	U+2122
+
+I-F9DA	U+267B		# BLACK UNIVERSAL RECYCLING SYMBOL
+I-F9DB	U+2117
+
+
+#; $Date: 2002/12/18 10:21:09 $
