@@ -1,3 +1,8 @@
+2002-12-18  Wakaba  <w@suika.fam.cx>
+
+	* imode.tbr, lmode.tbr, jphone.tbr, doti.tbr: New tables.
+	* Makefile: Updated.
+
 2002-10-14  Nanashi-san
 
 	* jisx0208_1978_irv.tbr, jisx0208_1983_irv.tbr: New tables.
